# cody_tools

./: README.md  pyproject.toml  setup.py
examples/: __init__.py  file_tools_example.py  system_tools_example.py  text_tools_example.py  web_tools_example.py
openclaw_tools/: __init__.py  file_tools.py  system_tools.py  text_tools.py  web_tools.py
smart_url_reader/: README.md  __init__.py  cli.py  obsidian_sync.py  smart_reader.py
tests/: __init__.py  test_file_tools.py  test_system_tools.py  test_text_tools.py  test_web_tools.py
url_utils/: README.md  __init__.py  platform_identifier.py
web_reader/: README.md  __init__.py  firecrawl_reader.py  jina_reader.py  playwright_reader.py
