[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-tools"
version = "0.1.0"
description = "A collection of utility tools for the OpenClaw AI automation framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw Community"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["openclaw", "tools", "automation", "ai"]

[project.urls]
Homepage = "https://github.com/coolham/cody_tools"
Repository = "https://github.com/coolham/cody_tools"

[tool.setuptools.packages.find]
where = ["."]
include = ["openclaw_tools*"]
